# QuensultingAI-Voice-Agent

./: .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  Conversation Flow Agent-2.json  Conversation Flow Agent-4.json  Conversation Flow Agent-5.json  Conversation Flow Agent-6.json  Conversation Flow Agent-7.json  Conversation Flow Agent-8.json  Conversation Flow Agent.json  DECISIONS.md  GEMINI.md  README.md  Take home assigment - VoiceAI Intern.md  loom_video_script.md  pyproject.toml  requirements.txt  tests.json
automation/: email_service.py  google_sheets.py  webhook.py
backend/: app.py
backend/models/: schemas.py
backend/services/: booking_service.py
docs/: api-contract.md  architecture.md  assumptions.md  conversation-flow.md  deployment.md  testing-checklist.md
prompts/: fallback-policy.md  faq.md  receptionist-system.md
retell/: agent.json  conversation-flow.json
retell/prompts/: .gitkeep
scripts/: configure_webhook.py  setup_keep_alive.py
tests/: .gitkeep  run_exhaustive_tests.py  test_app.py  test_booking_service.py  test_email_service.py  test_google_sheets.py  test_webhook.py
