[project]
name = "quensultingai-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110.0",
    "google-api-python-client>=2.122.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.1",
    "retell-sdk>=0.0.1",
    "uvicorn>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

